--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "@types/needle": "^2.5.3",
     "@types/node": "^18.11.9",
     "dotenv": "^16.0.3",
+    "json2csv": "^6.0.0-alpha.2",
     "needle": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/json2csv": "^5.0.7"
   }
 }
